--- a/packages/solana-batch-requests/package.json
+++ b/packages/solana-batch-requests/package.json
@@ -1,6 +1,6 @@
 {
   "name": "solana-batch-requests",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Solana batch requests package",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -10,7 +10,7 @@
     "lint": "tsc",
     "prepublishOnly": "npm run build",
     "deploy": "npm run build && npm publish --access public",
-    "test": "jest"
+    "test": "jest --forceExit"
   },
   "keywords": [
     "solana",
